@@ -1,6 +1,7 @@
 Changelog for App-Magpie
 
 {{$NEXT}}
+ - old: using cpan instead of cpanp
 
 2.000     2012-10-19 15:53:22 Europe/Paris
  - migrated to @dzpa:jquelin
